--- a/Task1/index.html
+++ b/Task1/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Advanced Calculator</title>
-  <link rel="stylesheet" href="task1.css">
+  <title>calculator</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
