--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -7,44 +7,50 @@
 </head>
 <body>
 
-  <!-- VIDEO SECTION -->
+  <!-- HERO VIDEO SECTION -->
   <section class="video-section">
-    <video controls autoplay muted loop>
+    <video autoplay muted loop controls>
       <source src="A.P.J EDIT  A.P.J Abdul kalam edit  Phonk Edit  H.M-3  On my own  Historic Micdrop  - Historic Micdrop (1080p, h264) (1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
+
+    <!-- HERO TITLE -->
+    <div class="hero-title">
+      <h1>Dr. A. P. J. Abdul Kalam</h1>
+      <p>The Missile Man of India</p>
+    </div>
   </section>
 
   <!-- BIOGRAPHY SECTION -->
   <section class="bio-section">
     <div class="bio-card">
+
       <img src="abdul-kalam-hd.jpg" alt="Dr. A. P. J. Abdul Kalam">
 
-      <h1>Dr. A. P. J. Abdul Kalam</h1>
-      <h3>Missile Man of India • Visionary Leader • Inspiration</h3>
+      <h2>Visionary • Scientist • Inspiration</h2>
 
       <p>
         Dr. A. P. J. Abdul Kalam was not merely a scientist or the former President of India,
-        but a guiding force for millions of young dreamers. Born into a humble family,
-        his journey stands as a powerful example of how discipline, perseverance,
-        and dedication can transform dreams into reality.
+        but a symbol of inspiration for millions. Born into a humble family, his life proves
+        that dedication, discipline, and belief in dreams can shape greatness.
       </p>
 
       <p>
-        What truly made Dr. Kalam exceptional was his humility and deep connection with students.
-        He believed that knowledge has true value only when it is shared, and he devoted his life
-        to inspiring young minds to think creatively and act responsibly for the nation’s future.
+        What made Dr. Kalam truly remarkable was his humility and love for students.
+        He believed knowledge must be shared and that young minds are the foundation
+        of a strong and self-reliant nation.
       </p>
 
       <p>
-        His life teaches us that success is not measured by position or power,
-        but by integrity, service, and contribution to society. Even today,
-        Dr. Kalam’s vision continues to inspire people to dream big and work with purpose.
+        He taught us that dreams are not what we see while sleeping, but what keep us awake
+        with purpose. His legacy continues to guide generations toward integrity,
+        curiosity, and service to humanity.
       </p>
 
       <div class="quote">
         “Dream, dream, dream. Dreams transform into thoughts and thoughts result in action.”
       </div>
+
     </div>
   </section>
 
