--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -1,58 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dr. A. P. J. Abdul Kalam</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Dr. A. P. J. Abdul Kalam | People's President</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
+
+  <!-- External CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-  <!-- HERO VIDEO SECTION -->
-  <section class="video-section">
-    <video autoplay muted loop controls>
-      <source src="A.P.J EDIT  A.P.J Abdul kalam edit  Phonk Edit  H.M-3  On my own  Historic Micdrop  - Historic Micdrop (1080p, h264) (1).mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+<!-- HERO -->
+<section class="hero">
+  <video autoplay muted loop playsinline class="video-bg">
+    <source src="A.P.J EDIT  A.P.J Abdul kalam edit  Phonk Edit  H.M-3  On my own  Historic Micdrop  - Historic Micdrop (1080p, h264) (1).mp4" type="video/mp4" />
+  </video>
 
-    <!-- HERO TITLE -->
-    <div class="hero-title">
-      <h1>Dr. A. P. J. Abdul Kalam</h1>
-      <p>The Missile Man of India</p>
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content">
+    <h1>DR. A. P. J. ABDUL KALAM</h1>
+    <p>MISSILE MAN OF INDIA • VISIONARY LEADER</p>
+    <span>Scientist • President • People's Hero</span>
+  </div>
+</section>
+
+<!-- STATS -->
+<section class="stats-bar">
+  <div class="stats-grid">
+    <div class="stat-box">
+      <h3>11</h3>
+      <p>Years at ISRO & DRDO</p>
     </div>
-  </section>
-
-  <!-- BIOGRAPHY SECTION -->
-  <section class="bio-section">
-    <div class="bio-card">
-
-      <img src="abdul-kalam-hd.jpg" alt="Dr. A. P. J. Abdul Kalam">
-
-      <h2>Visionary • Scientist • Inspiration</h2>
-
-      <p>
-        Dr. A. P. J. Abdul Kalam was not merely a scientist or the former President of India,
-        but a symbol of inspiration for millions. Born into a humble family, his life proves
-        that dedication, discipline, and belief in dreams can shape greatness.
-      </p>
-
-      <p>
-        What made Dr. Kalam truly remarkable was his humility and love for students.
-        He believed knowledge must be shared and that young minds are the foundation
-        of a strong and self-reliant nation.
-      </p>
-
-      <p>
-        He taught us that dreams are not what we see while sleeping, but what keep us awake
-        with purpose. His legacy continues to guide generations toward integrity,
-        curiosity, and service to humanity.
-      </p>
-
-      <div class="quote">
-        “Dream, dream, dream. Dreams transform into thoughts and thoughts result in action.”
-      </div>
-
+    <div class="stat-box">
+      <h3>2002–07</h3>
+      <p>President of India</p>
     </div>
-  </section>
+    <div class="stat-box">
+      <h3>1997</h3>
+      <p>Bharat Ratna</p>
+    </div>
+    <div class="stat-box">
+      <h3>25+</h3>
+      <p>Inspirational Books</p>
+    </div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="about">
+  <div class="about-img">
+    <img src="abdul-kalam-hd.jpg" alt="Dr Abdul Kalam">
+  </div>
+
+  <div class="about-text">
+    <h2>The People's President</h2>
+    <p>
+      Dr. A. P. J. Abdul Kalam was a visionary scientist, educator and the 11th President of India.
+      Known as the Missile Man of India, he played a crucial role in India's space and defense programs.
+    </p>
+
+    <p>
+      Despite reaching the highest office, he remained humble, simple, and deeply connected with students.
+      His life is a symbol of dedication, integrity, and service to the nation.
+    </p>
+
+    <p>
+      Dr. Kalam believed that youth are the real strength of the country and dedicated his life
+      to inspiring young minds to dream big and work hard.
+    </p>
+  </div>
+</section>
+
+<!-- ADMIRATION -->
+<section class="admiration">
+  <h2>Why India Admires Dr. Kalam</h2>
+
+  <div class="admire-grid">
+    <div class="admire-card">
+      <h3>Visionary Scientist</h3>
+      <p>Architect of India's missile and space programs.</p>
+    </div>
+
+    <div class="admire-card">
+      <h3>People's President</h3>
+      <p>The most loved President who connected with every citizen.</p>
+    </div>
+
+    <div class="admire-card">
+      <h3>Teacher at Heart</h3>
+      <p>Spent his life inspiring students across the nation.</p>
+    </div>
+
+    <div class="admire-card">
+      <h3>Symbol of Simplicity</h3>
+      <p>Lived a simple life despite holding the highest office.</p>
+    </div>
+  </div>
+</section>
+
+<!-- CAREER -->
+<section class="career">
+  <h2>The Journey of a Legend</h2>
+
+  <div class="career-content">
+    <div class="career-text">
+      <p>
+        Born in Rameswaram, Tamil Nadu, Dr. Kalam came from a humble background.
+        Through dedication and discipline, he became one of India’s greatest scientists.
+      </p>
+
+      <p>
+        He led India's missile development programs and played a key role in the Pokhran nuclear tests.
+      </p>
+
+      <p>
+        As President, he transformed Rashtrapati Bhavan into a people's house and became an icon of hope.
+      </p>
+    </div>
+  </div>
+</section>
+
+<!-- QUOTE -->
+<section class="quote">
+  <h2>"Dream, dream, dream. Dreams transform into thoughts and thoughts result in action."</h2>
+  <p>— Dr. A. P. J. Abdul Kalam</p>
+</section>
+
+<!-- FOOTER -->
+<footer>
+  <p>Tribute Website for Dr. A. P. J. Abdul Kalam</p>
+
+</footer>
 
 </body>
 </html>
